--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.5",
+    "@angular/animations": "^8.2.6",
+    "@angular/cdk": "^8.2.0",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.5",
+    "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "angular-font-awesome": "^3.1.2",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
