--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
+    "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.5",
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@material/textfield": "^3.2.0",
     "angular-font-awesome": "^3.1.2",
+    "firebase": "^6.6.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
