--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@angular/router": "~8.2.5",
     "@material/textfield": "^3.2.0",
     "angular-font-awesome": "^3.1.2",
-    "firebase": "^6.6.1",
+    "angularfire2": "^5.2.1",
+    "firebase": "^6.6.2",
     "font-awesome": "^4.7.0",
     "intl-tel-input": "^16.0.3",
     "rxjs": "~6.4.0",
