--- a/package.json
+++ b/package.json
@@ -12,37 +12,38 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.6",
-    "@angular/cdk": "^8.2.0",
-    "@angular/common": "~8.2.5",
-    "@angular/compiler": "~8.2.5",
-    "@angular/core": "~8.2.5",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.13",
+    "@angular/compiler": "^8.2.13",
+    "@angular/core": "^8.2.13",
     "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "~8.2.5",
-    "@angular/material": "^8.2.0",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/router": "~8.2.5",
+    "@angular/forms": "^8.2.13",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.13",
+    "@angular/platform-browser-dynamic": "^8.2.13",
+    "@angular/router": "^8.2.13",
     "@material/textfield": "^3.2.0",
     "angular-font-awesome": "^3.1.2",
     "angularfire2": "^5.2.1",
     "firebase": "^6.6.2",
     "font-awesome": "^4.7.0",
-    "intl-tel-input": "^16.0.3",
+    "hammerjs": "^2.0.8",
+    "intl-tel-input": "^16.0.7",
     "mdbootstrap": "^4.8.11",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.4",
-    "@angular/cli": "~8.3.4",
-    "@angular/compiler-cli": "~8.2.5",
-    "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.17",
+    "@angular/cli": "^8.3.17",
+    "@angular/compiler-cli": "^8.2.13",
+    "@angular/language-service": "^8.2.13",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
