--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hammerjs": "^2.0.8",
     "intl-tel-input": "^16.0.7",
     "mdbootstrap": "^4.8.11",
+    "ngx-tree-select": "^0.14.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
