--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hammerjs": "^2.0.8",
     "intl-tel-input": "^16.0.8",
     "mdbootstrap": "^4.10.1",
+    "ngx-spinner": "^8.1.0",
     "ngx-tree-select": "^0.14.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
