--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material/textfield": "^3.2.0",
     "@types/stripejs": "^3.0.5",
     "angular-font-awesome": "^3.1.2",
+    "angular-star-rating": "^4.0.0-beta.3",
     "angularfire2": "^5.2.3",
     "firebase": "^6.6.2",
     "font-awesome": "^4.7.0",
@@ -33,9 +34,12 @@
     "intl-tel-input": "^16.0.8",
     "lodash": "^4.17.15",
     "mdbootstrap": "^4.10.1",
+    "ng-starrating": "^1.0.11",
     "ngx-spinner": "^8.1.0",
+    "ngx-star-rating": "0.0.1",
     "ngx-tree-select": "^0.14.0",
     "rxjs": "~6.4.0",
+    "stars-rating": "^1.1.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
