--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-star-rating": "^4.0.0-beta.3",
     "angularfire2": "^5.2.3",
     "firebase": "^6.6.2",
+    "firebase-admin": "^8.8.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "intl-tel-input": "^16.0.8",
